--- a/click_counter.html
+++ b/click_counter.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Click counter React</title>
 	<meta charset="UTF-8">
-	<script src="build\react.min.js"></script>
-	<script src="build\react-dom.min.js"></script>
-	<script src="build\browser.min.js"></script>
+	<script src="react.min.js"></script>
+	<script src="react-dom.min.js"></script>
+	<script src="browser.min.js"></script>
 </head>
 <body>
 	<div id="container"></div>
